# tidbparser-rs

./: Cargo.toml  LICENSE  README.md
examples/: cli.rs
src/: admin.rs  lib.rs  parser.rs  statement.rs
