[package]
name = "tidbparser"
version = "0.1.0"
edition = "2021"

[lib]
name = "tidbparser"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
# sqlparser = { path = "../sqlparser-rs" }
sqlparser = { git = "https://github.com/siddontang/sqlparser-rs.git" }

[dev-dependencies]


[[example]]
name = "cli"
path = "examples/cli.rs"
